<resources>
    <string name="app_name">NLPC</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="verify_number">Verify Number</string>
    <string name="verify_msg">NLPC will send an SMS message (carrier charges may apply) to verify your number. Select your county and enter your phone number:</string>
    <string name="submit">submit</string>
    <string name="phone_number">Phone number</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_msg">waiting to automatically detect an SMS sent to +233 55885245</string>
    <string name="confirm">confirm</string>
    <string name="phone">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>

    <string name="events">Events</string>
    <string name="locations">Locations</string>

    <string name="more">More</string>
    <string name="discover">Discover</string>
    <string name="search_location">Search location</string>
    <string name="search_event">Search event</string>
    <string name="location_image">location_image</string>
    <string name="category_name">Category name</string>
    <string name="save">SAVE</string>
    <string name="preview">Preview:</string>
    <string name="listen_now">Listen now</string>
    <string name="browse">Browse</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_categories">ADD CATEGORIES</string>
    <string name="add_category">Add Category</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="add_sub_category">ADD SUB CATEGORY</string>
    <string name="top_picks">Top Picks</string>
    <string name="add_episode">ADD EPISODE</string>
    <string name="episode_duration">Episode duration</string>
    <string name="episode_date">Episode date</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

</resources>