<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:title="@string/listen_now"
        android:id="@+id/listenNowFragment"
        android:icon="@drawable/play_24"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/browse"
        android:id="@+id/browseCategoryFragment"
        android:icon="@drawable/ic_baseline_widgets_24"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/library"
        android:id="@+id/libr"
        android:icon="@drawable/ic_baseline_library_music_24"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_24"
        app:showAsAction="ifRoom"/>



</menu>