<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/episodeImageIv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/deep_gray" />

    <EditText
        android:id="@+id/episodeNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/episodeImageIv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:lines="1"

        android:inputType="text"
        android:layout_marginEnd="16dp"
        android:hint="@string/category_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/episode_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/episodeNameEt"
        android:layout_marginStart="16dp"
        android:inputType="text"
        android:maxLength="15"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/episode_duration"
        android:autofillHints=""
         />

    <EditText
        android:id="@+id/episode_date"
        android:layout_width="wrap_content"
        android:lines="1"
        android:maxLength="20"
        android:layout_height="wrap_content"
        android:layout_below="@id/episodeNameEt"
        android:layout_marginStart="16dp"
        android:inputType="text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/episode_date"
        android:autofillHints="" />


    <Button
        android:id="@+id/episodeCancelBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/episode_date"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/episodeUploadBtn"
        android:text="@string/cancel" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:icon="@drawable/upload_24"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:layout_below="@id/episode_date"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:id="@+id/episodeUploadBtn"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/upload" />

</RelativeLayout>