<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/subCategoryImageIv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:background="@color/deep_gray" />

    <EditText
        android:id="@+id/subCategoryNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subCategoryImageIv"
        android:layout_margin="16dp"
        android:hint="@string/category_name" />


    <Button
        android:id="@+id/subCategoryCancelBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subCategoryNameEt"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/subCategoryUploadBtn"
        android:text="@string/cancel" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:icon="@drawable/upload_24"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:layout_below="@id/subCategoryNameEt"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:id="@+id/subCategoryUploadBtn"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/upload" />


</RelativeLayout>